fixes height-to-width proportion so image doesnt get squished.

--- a/static/s.css
+++ b/static/s.css
@@ -99,7 +99,6 @@ ul > li {
     background-color: #16242F !important;
 }
 .carousel-item > img {
-    height: 60vh;
     width: 60vw;
 }
 #bottom-gallery{
